docs/configure/metal-lb-manifests/sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    kubernetes.io/ingress.class: citrix 
  name: sample-ingress
spec:
  rules:
  - host: testdomain.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /
